# atividadelp1

./: .gitignore  CMakeLists.txt  README.md  questao1.c  questao2.c  questao3.c  questao4.c  questao5.c  questao6.c
