cmake_minimum_required(VERSION 3.30)
project(atividadelp C)

set(CMAKE_C_STANDARD 11)

add_executable(questao1 questao1.c
        questao1.c)
add_executable(questao2 questao2.c
        questao2.c)
add_executable(questao3 questao3.c
        questao3.c)
add_executable(questao4 questao4.c
        questao4.c)
add_executable(questao5 questao5.c
        questao5.c)
add_executable(questao6 questao6.c
        questao6.c)
